--- a/css/header.css
+++ b/css/header.css
@@ -68,6 +68,10 @@
   line-height: 1.3;
 }
 
+.header__nav-dropdown-image {
+  margin-right: 24px;
+}
+
 .header__nav-element--services {
   position: relative;
 
