--- a/css/header.css
+++ b/css/header.css
@@ -3,16 +3,11 @@
   top: 24px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(53, 105, 193, 0.6);
-  backdrop-filter: blur(30px);
+  background: #3569C1;
   font-size: 16px;
   border-radius: 26px;
   width: fit-content;
   transition: border-radius 0.3s ease;
-}
-
-.header:has(.header__nav-item--services:hover) {
-  border-radius: 26px 26px 0 0;
 }
 
 .header__nav-list {
@@ -51,7 +46,6 @@
   &:hover {
     .header__nav-dropdown {
       max-height: 500px;
-      opacity: 1;
       padding-bottom: 60px;
     }
 
@@ -70,20 +64,7 @@
 
 .header__nav-dropdown-image {
   margin-right: 24px;
-}
-
-.header__nav-element--services {
-  position: relative;
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 20px;
-    z-index: 1;
-  }
+  margin-top: 16px; 
 }
 
 .header__nav-element--link {
@@ -133,19 +114,18 @@
 
 .header__nav-dropdown {
   position: absolute;
-  top: 100%;
+  z-index: -1;
+  top: 0;
   width: 100%;
   left: 0;
-  background: rgba(53, 105, 193, 0.6);
-  backdrop-filter: blur(30px);
-  border-radius: 0 0 26px 26px;
+  background: #3569C1;
+  border-radius: 26px;
   max-height: 0;
-  opacity: 0;
   overflow: hidden;
   padding-bottom: 0;
+  padding-top: 60px;
   transition:
-    max-height 0.5s ease,
-    opacity 0.3s ease,
+    max-height 0.7s ease,
     padding-bottom 0.5s ease;
   display: flex;
   justify-content: space-between;
